# smart_lang_chain

./: README.md  app.py  pyproject.toml
lessons/: basic.py  llm_chain.py
